# python-universal-format-identifier

./: .gitignore  FORMATS.md  README.md  TASKS.md  pyproject.toml
docs/: design.md  integrate.md  tasklist.md
file/: extensions.txt  formats.txt
pufi/: __init__.py  core.py  env.py  resource.py  schema.py  variable.py  vars.py
